--- a/404.html
+++ b/404.html
@@ -7,14 +7,15 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
 		<meta name="viewport" content="width=device-width" />
+        <meta name="description" content="Creative web developer portfolio of Dale" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Dx8sxKn3.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DAUUoAmn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.1GZGV_sw.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CbZtkr_R.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CT7vumE0.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BMH8jSPU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BEdq9j4O.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CiqAP0Vq.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.BYAe5Qf8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
         <!-- PRELOAD -->
         <link rel="preload" href="/font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
         <link rel="preload" href="/font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
@@ -32,15 +33,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1npx7aq = {
+					__sveltekit_y75suq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Dx8sxKn3.js"),
-						import("/_app/immutable/entry/app.CT7vumE0.js")
+						import("/_app/immutable/entry/start.BMH8jSPU.js"),
+						import("/_app/immutable/entry/app.CiqAP0Vq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
