--- a/404.html
+++ b/404.html
@@ -9,11 +9,11 @@
 		<meta name="viewport" content="width=device-width" />
         <meta name="description" content="Creative web developer portfolio of Dale" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BMH8jSPU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BEdq9j4O.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bq13NirR.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DLzoKpNO.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CiqAP0Vq.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CE1Ieac4.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
         <!-- PRELOAD -->
@@ -33,15 +33,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_y75suq = {
+					__sveltekit_16rgjli = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BMH8jSPU.js"),
-						import("/_app/immutable/entry/app.CiqAP0Vq.js")
+						import("/_app/immutable/entry/start.Bq13NirR.js"),
+						import("/_app/immutable/entry/app.CE1Ieac4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
