--- a/blog.html
+++ b/blog.html
@@ -9,20 +9,20 @@
 		<meta name="viewport" content="width=device-width" />
         <meta name="description" content="Creative web developer portfolio of Dale" />
 		
-		<link href="./_app/immutable/assets/0.DVqHgjfj.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.B4oYMSUn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BMH8jSPU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BEdq9j4O.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bq13NirR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DLzoKpNO.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CiqAP0Vq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CE1Ieac4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CO7fLiMo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cr1pxBPo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CtUyu9RO.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.C7PS4d6C.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.uzBru3RV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.HgqV9Bsf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.P_EshAxC.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.P3m6pMNB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.C0o1sbw3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
@@ -42,7 +42,7 @@
 			
 			<script>
 				{
-					__sveltekit_y75suq = {
+					__sveltekit_16rgjli = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -51,8 +51,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BMH8jSPU.js"),
-						import("./_app/immutable/entry/app.CiqAP0Vq.js")
+						import("./_app/immutable/entry/start.Bq13NirR.js"),
+						import("./_app/immutable/entry/app.CE1Ieac4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
