--- a/404.html
+++ b/404.html
@@ -2,20 +2,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
+        <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+
+        <!-- Meta -->
 		<meta name="viewport" content="width=device-width" />
         <meta name="description" content="Creative web developer portfolio of Dale" />
-		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bq13NirR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DLzoKpNO.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CE1Ieac4.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
+        <!-- https://github.com/joshbuchea/HEAD -->
+        <!-- Facebook Open Graph -->
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="/img/ui/stellar-bg/stellar-stellar.webp">
+        <meta property="og:image:alt" content="Meteor passing over the horizon.">
+        <meta property="og:description" content="lnfel's room, Dale's web developer portfolio and blog.">
+        <meta property="og:site_name" content="lnfel's Room">
+        <meta property="og:locale" content="en_US">
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="lnfel's Room">
+        <meta name="twitter:description" content="lnfel's room, Dale's web developer portfolio and blog.">
+        <meta name="twitter:image" content="/img/ui/stellar-bg/stellar-stellar.webp">
+        <meta name="twitter:image:alt" content="Meteor passing over the horizon.">
+        <!-- Pinterest -->
+        <meta name="pinterest" content="nopin" description="Sorry, you can't save from my website!">
+
         <!-- PRELOAD -->
         <link rel="preload" href="/font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
         <link rel="preload" href="/font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
@@ -28,20 +41,28 @@
         <!-- CSS -->
         <link rel="stylesheet" href="/css/font.css">
         <link rel="stylesheet" href="/css/main.css">
+        
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D0xobcUP.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.pfeEjLBD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BI2TJkVQ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_16rgjli = {
+					__sveltekit_t6edit = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bq13NirR.js"),
-						import("/_app/immutable/entry/app.CE1Ieac4.js")
+						import("/_app/immutable/entry/start.D0xobcUP.js"),
+						import("/_app/immutable/entry/app.BI2TJkVQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
