--- a/index.html
+++ b/index.html
@@ -2,29 +2,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
+        <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
         <link rel="manifest" href="./site.webmanifest">
+
+        <!-- Meta -->
 		<meta name="viewport" content="width=device-width" />
         <meta name="description" content="Creative web developer portfolio of Dale" />
-		
-		<link href="./_app/immutable/assets/0.B4oYMSUn.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.CSWRdHzI.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Bq13NirR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DLzoKpNO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CE1Ieac4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CO7fLiMo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C7PS4d6C.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.uzBru3RV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.tMTH5BTC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.C0o1sbw3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
+        <!-- https://github.com/joshbuchea/HEAD -->
+        <!-- Facebook Open Graph -->
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="./img/ui/stellar-bg/stellar-stellar.webp">
+        <meta property="og:image:alt" content="Meteor passing over the horizon.">
+        <meta property="og:description" content="lnfel's room, Dale's web developer portfolio and blog.">
+        <meta property="og:site_name" content="lnfel's Room">
+        <meta property="og:locale" content="en_US">
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="lnfel's Room">
+        <meta name="twitter:description" content="lnfel's room, Dale's web developer portfolio and blog.">
+        <meta name="twitter:image" content="./img/ui/stellar-bg/stellar-stellar.webp">
+        <meta name="twitter:image:alt" content="Meteor passing over the horizon.">
+        <!-- Pinterest -->
+        <meta name="pinterest" content="nopin" description="Sorry, you can't save from my website!">
+
         <!-- PRELOAD -->
         <link rel="preload" href="./font/Cyberpunk-Regular.ttf" as="font" type="font/ttf" crossorigin>
         <link rel="preload" href="./font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
@@ -37,6 +41,23 @@
         <!-- CSS -->
         <link rel="stylesheet" href="./css/font.css">
         <link rel="stylesheet" href="./css/main.css">
+        
+		<link href="./_app/immutable/assets/0.B4oYMSUn.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.CSWRdHzI.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D0xobcUP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.pfeEjLBD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BI2TJkVQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CO7fLiMo.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CFVtSYVN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BMfDp450.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CuSRBmDY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.DfmZHov-.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
 		<div style="display: contents">   <header class="fixed top-0 left-0 w-full md:w-[7rem] md:h-full bg-slate-900/50 px-4 py-2 lg:px-[3rem] z-30 transition-all duration-300"><div class="flex items-center justify-between"><a href="./" draggable="false" aria-label="Infel's Room logo" class="logo group md:-rotate-90 text-indigo-500 dark:text-indigo-200 outline-none md:absolute md:translate-y-[-50%] md:translate-x-[-50%] md:top-[50%] md:left-[50%] svelte-x8dn08"><h1 class="logo-text uppercase font-zenless-logo tracking-wider whitespace-nowrap italic px-4 transition-all duration-300 svelte-x8dn08" data-svelte-h="svelte-15lcnew">lnfel&#39;s Room</h1> </a> <button type="button" class="md:hidden text-tulip-tree-400 outline-none hover:bg-tulip-tree-400 focus:bg-tulip-tree-400 hover:text-slate-900 focus:text-slate-900 transition-colors p-2" data-svelte-h="svelte-mlmmxo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu"><line x1="4" x2="20" y1="12" y2="12"></line><line x1="4" x2="20" y1="6" y2="6"></line><line x1="4" x2="20" y1="18" y2="18"></line></svg> <span class="sr-only">Toggle menu</span></button></div> </header>  <main data-scrolled-amount="0" data-percentage="0" class="relative w-[max-content] h-screen md:static md:flex md:items-stretch md:h-full will-change-scroll"><div class="stellar-container fixed inset-0 md:relative w-screen h-[100dvh] overflow-hidden shrink-0 z-20 svelte-x2r4ko"><div class="stellar-bg h-full relative svelte-x2r4ko" data-svelte-h="svelte-1dg1urr"><div class="stellar-colored svelte-x2r4ko"></div> <img src="/img/ui/stellar-bg/grayscale.webp" alt="" class="stellar-grayscale hidden md:block svelte-x2r4ko"></div> <div class="menu-container absolute inset-0 z-30 svelte-x2r4ko"><nav class="menu w-full h-full flex flex-col justify-between md:p-20 svelte-x2r4ko"><div class="menu-links-container flex flex-col gap-2 px-4 py-6 pt-36 md:pt-0 md:pl-[5rem]"><a href=".#about" aria-label="Go to about section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">About</a><a href=".#projects" aria-label="Go to projects section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Projects</a><a href=".#contact" aria-label="Go to contact section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Contact</a><span class="menu-link-disabled flex items-center gap-2 max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2"><div class="text-slate-500 line-through">Blog</div> <div class="text-xs leading-none bg-tulip-tree-400 rounded-full overflow-hidden px-2 py-1" data-svelte-h="svelte-12i10eu">Soon</div></span></div> <div class="flex items-center gap-2 px-8 py-6 md:pl-[6.5rem]" data-svelte-h="svelte-1t21kj"><div class="w-10 h-10"><img src="/img/ui/svelte-logo.svg" alt="" width="100" height="100" class="object-contain aspect-square"></div> <span class="font-zenless-copy">Proudly made with <a href="https://kit.svelte.dev/" aria-label="Proudly made with SvelteKit" target="_blank" class="text-[#ff3e00] outline-none hover:underline focus:underline">SvelteKit</a></span></div></nav></div> </div> <section id="about" class="w-screen md:h-[100dvh] shrink-0 flex px-4 py-6 pt-[9rem] md:p-20"><div class="md:w-[7rem]"></div> <div class="section-content h-full md:overflow-y-auto px-6 space-y-10"><article class="space-y-2" data-svelte-h="svelte-1737ugt"><h1 class="w-full font-zenless-title text-4xl md:text-5xl dark:bg-slate-900 py-2">About</h1> <p class="font-zenless-copy text-xl leading-normal max-w-[60ch]">Hey there, I&#39;m Dale and welcome to my room. Feel free to look around or scroll a bit more to see my recent projects.</p></article> <article class="space-y-2"><h2 class="w-full font-zenless-title text-2xl md:text-3xl dark:bg-slate-900 py-2" data-svelte-h="svelte-1qqvgyl">Technologies and development tools I am familiar with</h2> <p class="font-zenless-copy text-xl leading-normal max-w-[60ch]" data-svelte-h="svelte-19tzoi0">Here are a list of languages and technologies that I am familiar and worked with in the past up until now:</p> <div class="pt-2 space-y-2"><h3 class="font-zenless-title text-lg" data-svelte-h="svelte-of6cig">Languages</h3> <ul class="font-zenless-copy flex flex-wrap items-center gap-2 text-xl leading-normal max-w-[60ch]"><li class="flex items-center gap-2 leading-none bg-[#F7DF1E] text-slate-900 px-2 py-1 svelte-cw37j7"><span>JavaScript</span> </li><li class="flex items-center gap-2 leading-none bg-[#E34F26] undefined px-2 py-1 svelte-cw37j7"><span>HTML5</span> </li><li class="flex items-center gap-2 leading-none bg-[#1572B6] undefined px-2 py-1 svelte-cw37j7"><span>CSS</span> </li><li class="flex items-center gap-2 leading-none bg-[#777BB4] undefined px-2 py-1 svelte-cw37j7"><span>PHP</span> </li><li class="flex items-center gap-2 leading-none bg-[#CC342D] undefined px-2 py-1 svelte-cw37j7"><span>Ruby</span> </li><li class="flex items-center gap-2 leading-none bg-[#754830] undefined px-2 py-1 svelte-cw37j7"><span>Rust</span> </li><li class="flex items-center gap-2 leading-none bg-[#4EAA25] undefined px-2 py-1 svelte-cw37j7"><span>Bash</span> </li></ul></div> <div class="pt-2 space-y-2"><h3 class="font-zenless-title text-lg" data-svelte-h="svelte-1lnhbga">Meta framework</h3> <ul class="font-zenless-copy flex flex-wrap items-center gap-2 text-xl leading-normal max-w-[60ch]"><li class="flex items-center gap-2 leading-none bg-[#FF3E00] undefined px-2 py-1 svelte-cw37j7"><span>Svelte</span> </li><li class="flex items-center gap-2 leading-none bg-[#818cf8] undefined px-2 py-1 svelte-cw37j7"><span>Elysia</span> </li><li class="flex items-center gap-2 leading-none bg-[#4FC08D] undefined px-2 py-1 svelte-cw37j7"><span>Vue</span> </li><li class="flex items-center gap-2 leading-none bg-[#259dff] undefined px-2 py-1 svelte-cw37j7"><span>Express</span> </li><li class="flex items-center gap-2 leading-none bg-[#FF2D20] undefined px-2 py-1 svelte-cw37j7"><span>Laravel</span> </li><li class="flex items-center gap-2 leading-none bg-[#D30001] undefined px-2 py-1 svelte-cw37j7"><span>Ruby on Rails</span> </li></ul></div> <div class="pt-2 space-y-2"><h3 class="font-zenless-title text-lg" data-svelte-h="svelte-12fkqz1">Tooling</h3> <ul class="font-zenless-copy flex flex-wrap items-center gap-2 text-xl leading-normal max-w-[60ch]"><li class="flex items-center gap-2 leading-none bg-[#F05032] undefined px-2 py-1 svelte-cw37j7"><span>Git</span> </li><li class="flex items-center gap-2 leading-none bg-[#339933] undefined px-2 py-1 svelte-cw37j7"><span>NodeJS</span> </li><li class="flex items-center gap-2 leading-none bg-[#f472b6] undefined px-2 py-1 svelte-cw37j7"><span>Bun</span> </li><li class="flex items-center gap-2 leading-none bg-[#430098] undefined px-2 py-1 svelte-cw37j7"><span>Heroku</span> </li><li class="flex items-center gap-2 leading-none bg-[#0080FF] undefined px-2 py-1 svelte-cw37j7"><span>DigitalOcean</span> </li><li class="flex items-center gap-2 leading-none bg-[#646CFF] undefined px-2 py-1 svelte-cw37j7"><span>Vite</span> </li><li class="flex items-center gap-2 leading-none bg-[#009639] undefined px-2 py-1 svelte-cw37j7"><span>NGINX</span> </li><li class="flex items-center gap-2 leading-none bg-[#D22128] undefined px-2 py-1 svelte-cw37j7"><span>Apache</span> </li><li class="flex items-center gap-2 leading-none bg-[#4285F4] undefined px-2 py-1 svelte-cw37j7"><span>PageSpeed Insigths</span> </li><li class="flex items-center gap-2 leading-none bg-[#FF6600] undefined px-2 py-1 svelte-cw37j7"><span>RabbitMQ</span> </li><li class="flex items-center gap-2 leading-none bg-[#FF9900] undefined px-2 py-1 svelte-cw37j7"><span>Amazon EC2</span> </li><li class="flex items-center gap-2 leading-none bg-[#FF9900] undefined px-2 py-1 svelte-cw37j7"><span>AWS Lamdba</span> </li><li class="flex items-center gap-2 leading-none bg-[#569A31] undefined px-2 py-1 svelte-cw37j7"><span>Amazon S3</span> </li><li class="flex items-center gap-2 leading-none bg-[#0078D4] undefined px-2 py-1 svelte-cw37j7"><span>Microsoft Azure</span> </li><li class="flex items-center gap-2 leading-none bg-[#4285F4] undefined px-2 py-1 svelte-cw37j7"><span>Google Cloud</span> </li><li class="flex items-center gap-2 leading-none bg-[#2088FF] undefined px-2 py-1 svelte-cw37j7"><span>Github Actions</span> </li><li class="flex items-center gap-2 leading-none bg-tulip-tree-400 undefined px-2 py-1 svelte-cw37j7"><span>...and many more</span> </li></ul></div></article> <article class="space-y-2" data-svelte-h="svelte-1c0g8qf"><h2 class="sticky top-0 z-10 w-full font-zenless-title text-2xl md:text-3xl dark:bg-slate-900 py-2">How I fell in love with web development</h2> <p class="font-zenless-copy text-xl leading-normal max-w-[60ch]">It started as a hobby in 2010 writing CSS to customize Friendster profiles then came a thirst for something more.
@@ -47,7 +68,7 @@
 			
 			<script>
 				{
-					__sveltekit_16rgjli = {
+					__sveltekit_t6edit = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -56,8 +77,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Bq13NirR.js"),
-						import("./_app/immutable/entry/app.CE1Ieac4.js")
+						import("./_app/immutable/entry/start.D0xobcUP.js"),
+						import("./_app/immutable/entry/app.BI2TJkVQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
