--- a/404.html
+++ b/404.html
@@ -12,20 +12,15 @@
         <!-- Meta -->
 		<meta name="viewport" content="width=device-width" />
         <meta name="description" content="Creative web developer portfolio of Dale" />
-        <!-- https://github.com/joshbuchea/HEAD -->
-        <!-- Facebook Open Graph -->
-        <meta property="og:type" content="website">
-        <meta property="og:image" content="/img/ui/stellar-bg/stellar-stellar.webp">
-        <meta property="og:image:alt" content="Meteor passing over the horizon.">
-        <meta property="og:description" content="lnfel's room, Dale's web developer portfolio and blog.">
-        <meta property="og:site_name" content="lnfel's Room">
-        <meta property="og:locale" content="en_US">
-        <!-- Twitter Card -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="lnfel's Room">
-        <meta name="twitter:description" content="lnfel's room, Dale's web developer portfolio and blog.">
-        <meta name="twitter:image" content="/img/ui/stellar-bg/stellar-stellar.webp">
-        <meta name="twitter:image:alt" content="Meteor passing over the horizon.">
+
+        
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Dnscvm4b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DTcVbdj7.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.jsmTm0sh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.C_RDnXz8.js">
         <!-- Pinterest -->
         <meta name="pinterest" content="nopin" description="Sorry, you can't save from my website!">
 
@@ -41,28 +36,20 @@
         <!-- CSS -->
         <link rel="stylesheet" href="/css/font.css">
         <link rel="stylesheet" href="/css/main.css">
-        
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D0xobcUP.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.pfeEjLBD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BI2TJkVQ.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_t6edit = {
+					__sveltekit_dcehg9 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D0xobcUP.js"),
-						import("/_app/immutable/entry/app.BI2TJkVQ.js")
+						import("/_app/immutable/entry/start.Dnscvm4b.js"),
+						import("/_app/immutable/entry/app.jsmTm0sh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
