--- a/blog.html
+++ b/blog.html
@@ -12,20 +12,24 @@
         <!-- Meta -->
 		<meta name="viewport" content="width=device-width" />
         <meta name="description" content="Creative web developer portfolio of Dale" />
-        <!-- https://github.com/joshbuchea/HEAD -->
-        <!-- Facebook Open Graph -->
-        <meta property="og:type" content="website">
-        <meta property="og:image" content="./img/ui/stellar-bg/stellar-stellar.webp">
-        <meta property="og:image:alt" content="Meteor passing over the horizon.">
-        <meta property="og:description" content="lnfel's room, Dale's web developer portfolio and blog.">
-        <meta property="og:site_name" content="lnfel's Room">
-        <meta property="og:locale" content="en_US">
-        <!-- Twitter Card -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="lnfel's Room">
-        <meta name="twitter:description" content="lnfel's room, Dale's web developer portfolio and blog.">
-        <meta name="twitter:image" content="./img/ui/stellar-bg/stellar-stellar.webp">
-        <meta name="twitter:image:alt" content="Meteor passing over the horizon.">
+
+        
+		<link href="./_app/immutable/assets/0.B4oYMSUn.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Dnscvm4b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DTcVbdj7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.jsmTm0sh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.C_RDnXz8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CClJhdDd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/globals.D0QH3NT1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.C056zZND.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.BJ8-Q04S.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.DOPVXh4H.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- Pinterest -->
         <meta name="pinterest" content="nopin" description="Sorry, you can't save from my website!">
 
@@ -41,29 +45,13 @@
         <!-- CSS -->
         <link rel="stylesheet" href="./css/font.css">
         <link rel="stylesheet" href="./css/main.css">
-        
-		<link href="./_app/immutable/assets/0.B4oYMSUn.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D0xobcUP.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.pfeEjLBD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BI2TJkVQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CO7fLiMo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CFVtSYVN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BMfDp450.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.BTxEZjLD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.DfmZHov-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
 		<div style="display: contents">   <header class="fixed top-0 left-0 w-full md:w-[7rem] md:h-full bg-slate-900/50 px-4 py-2 lg:px-[3rem] z-30 transition-all duration-300"><div class="flex items-center justify-between"><a href="./" draggable="false" aria-label="Infel's Room logo" class="logo group md:-rotate-90 text-indigo-500 dark:text-indigo-200 outline-none md:absolute md:translate-y-[-50%] md:translate-x-[-50%] md:top-[50%] md:left-[50%] svelte-x8dn08"><h1 class="logo-text uppercase font-zenless-logo tracking-wider whitespace-nowrap italic px-4 transition-all duration-300 svelte-x8dn08" data-svelte-h="svelte-15lcnew">lnfel&#39;s Room</h1> </a> <button type="button" class="md:hidden text-tulip-tree-400 outline-none hover:bg-tulip-tree-400 focus:bg-tulip-tree-400 hover:text-slate-900 focus:text-slate-900 transition-colors p-2" data-svelte-h="svelte-mlmmxo"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-menu"><line x1="4" x2="20" y1="12" y2="12"></line><line x1="4" x2="20" y1="6" y2="6"></line><line x1="4" x2="20" y1="18" y2="18"></line></svg> <span class="sr-only">Toggle menu</span></button></div> </header>  <main data-scrolled-amount="0" data-percentage="0" class="relative w-[max-content] h-screen md:static md:flex md:items-stretch md:h-full will-change-scroll"><div class="stellar-container fixed inset-0 md:relative w-screen h-[100dvh] overflow-hidden shrink-0 z-20 svelte-x2r4ko"><div class="stellar-bg h-full relative svelte-x2r4ko" data-svelte-h="svelte-1dg1urr"><div class="stellar-colored svelte-x2r4ko"></div> <img src="/img/ui/stellar-bg/grayscale.webp" alt="" class="stellar-grayscale hidden md:block svelte-x2r4ko"></div> <div class="menu-container absolute inset-0 z-30 svelte-x2r4ko"><nav class="menu w-full h-full flex flex-col justify-between md:p-20 svelte-x2r4ko"><div class="menu-links-container flex flex-col gap-2 px-4 py-6 pt-36 md:pt-0 md:pl-[5rem]"><a href="./" aria-label="Go to home section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Home</a><a href="./#about" aria-label="Go to about section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">About</a><a href="./#projects" aria-label="Go to projects section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Projects</a><a href="./#contact" aria-label="Go to contact section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Contact</a><a href="./blog" aria-label="Go to blog section." class="menu-link max-w-fit font-zenless-title uppercase text-4xl md:text-5xl outline-none px-6 py-2">Blog</a></div> <div class="flex items-center gap-2 px-8 py-6 md:pl-[6.5rem]" data-svelte-h="svelte-1t21kj"><div class="w-10 h-10"><img src="/img/ui/svelte-logo.svg" alt="" width="100" height="100" class="object-contain aspect-square"></div> <span class="font-zenless-copy">Proudly made with <a href="https://kit.svelte.dev/" aria-label="Proudly made with SvelteKit" target="_blank" class="text-[#ff3e00] outline-none hover:underline focus:underline">SvelteKit</a></span></div></nav></div> </div> <section id="blog" class="w-screen h-screen shrink-0 flex px-4 py-6 pt-[9rem] md:p-20" data-svelte-h="svelte-1a89hhk"></section></main>  
 			
 			<script>
 				{
-					__sveltekit_t6edit = {
+					__sveltekit_dcehg9 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -72,8 +60,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D0xobcUP.js"),
-						import("./_app/immutable/entry/app.BI2TJkVQ.js")
+						import("./_app/immutable/entry/start.Dnscvm4b.js"),
+						import("./_app/immutable/entry/app.jsmTm0sh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
