--- a/404.html
+++ b/404.html
@@ -14,11 +14,11 @@
         <meta name="description" content="Creative web developer portfolio of Dale" />
 
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Dnscvm4b.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DTcVbdj7.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.C_XGMAGo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DrfT4bVU.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.jsmTm0sh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.B0p9ga3q.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.C_RDnXz8.js">
         <!-- Pinterest -->
@@ -41,15 +41,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_dcehg9 = {
+					__sveltekit_1vhg505 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Dnscvm4b.js"),
-						import("/_app/immutable/entry/app.jsmTm0sh.js")
+						import("/_app/immutable/entry/start.C_XGMAGo.js"),
+						import("/_app/immutable/entry/app.B0p9ga3q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
