--- a/blog.html
+++ b/blog.html
@@ -16,19 +16,19 @@
         
 		<link href="./_app/immutable/assets/0.B4oYMSUn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dnscvm4b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DTcVbdj7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C_XGMAGo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DrfT4bVU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.jsmTm0sh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B0p9ga3q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C_RDnXz8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CClJhdDd.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.1-6Htvi1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/globals.D0QH3NT1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.C056zZND.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bt3IUi2G.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.BJ8-Q04S.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.DOPVXh4H.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.CGrhoO5R.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.BmPhWOiN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
         <!-- Pinterest -->
         <meta name="pinterest" content="nopin" description="Sorry, you can't save from my website!">
@@ -51,7 +51,7 @@
 			
 			<script>
 				{
-					__sveltekit_dcehg9 = {
+					__sveltekit_1vhg505 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -60,8 +60,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dnscvm4b.js"),
-						import("./_app/immutable/entry/app.jsmTm0sh.js")
+						import("./_app/immutable/entry/start.C_XGMAGo.js"),
+						import("./_app/immutable/entry/app.B0p9ga3q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
