--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 		<link href="./_app/immutable/assets/0.B4oYMSUn.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CSWRdHzI.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dnscvm4b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DTcVbdj7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C_XGMAGo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DrfT4bVU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.jsmTm0sh.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B0p9ga3q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.C_RDnXz8.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CClJhdDd.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.1-6Htvi1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/globals.D0QH3NT1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.C056zZND.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bt3IUi2G.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DhviER0n.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.DOPVXh4H.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END --><!-- HEAD_svelte-1onr8vv_START --><meta property="og:type" content="website"><meta property="og:image" content="./img/ui/stellar-bg/stellar-stellar.webp"><meta property="og:image:alt" content="Meteor passing over the horizon."><meta property="og:description" content="lnfel's room, Dale's web developer portfolio and blog."><meta property="og:site_name" content="lnfel's Room"><meta property="og:locale" content="en_US"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:title" content="lnfel's Room"><meta name="twitter:description" content="lnfel's room, Dale's web developer portfolio and blog."><meta name="twitter:image" content="./img/ui/stellar-bg/stellar-stellar.webp"><meta name="twitter:image:alt" content="Meteor passing over the horizon."><!-- HEAD_svelte-1onr8vv_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.B067oP0c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.BmPhWOiN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END --><!-- HEAD_svelte-15cq2td_START --><meta property="og:type" content="website"><meta property="og:image" content="https://lnfel.github.io/img/ui/stellar-bg/stellar-stellar.webp"><meta property="og:image:alt" content="Meteor passing over the horizon."><meta property="og:description" content="lnfel's room, Dale's web developer portfolio and blog."><meta property="og:site_name" content="lnfel's Room"><meta property="og:locale" content="en_US"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:title" content="lnfel's Room"><meta name="twitter:description" content="lnfel's room, Dale's web developer portfolio and blog."><meta name="twitter:image" content="https://lnfel.github.io/img/ui/stellar-bg/stellar-stellar.webp"><meta name="twitter:image:alt" content="Meteor passing over the horizon."><!-- HEAD_svelte-15cq2td_END -->
         <!-- Pinterest -->
         <meta name="pinterest" content="nopin" description="Sorry, you can't save from my website!">
 
@@ -56,7 +56,7 @@
 			
 			<script>
 				{
-					__sveltekit_dcehg9 = {
+					__sveltekit_1vhg505 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -65,8 +65,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dnscvm4b.js"),
-						import("./_app/immutable/entry/app.jsmTm0sh.js")
+						import("./_app/immutable/entry/start.C_XGMAGo.js"),
+						import("./_app/immutable/entry/app.B0p9ga3q.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
