--- a/404.html
+++ b/404.html
@@ -12,15 +12,25 @@
         <!-- Meta -->
 		<meta name="viewport" content="width=device-width" />
         <meta name="description" content="Creative web developer portfolio of Dale" />
+        <!-- https://github.com/joshbuchea/HEAD -->
+        <!--
+            Image url must be absolute path
+            https://stackoverflow.com/a/73545179/12478479
+        -->
+        <!-- Facebook Open Graph -->
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://lnfel.github.io/img/ui/stellar-bg/stellar-stellar.webp?v=-571598715">
+        <meta property="og:image:alt" content="Meteor passing over the horizon.">
+        <meta property="og:description" content="lnfel's room, Dale's web developer portfolio and blog.">
+        <meta property="og:site_name" content="lnfel's Room">
+        <meta property="og:locale" content="en_US">
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="lnfel's Room">
+        <meta name="twitter:description" content="lnfel's room, Dale's web developer portfolio and blog.">
+        <meta name="twitter:image" content="https://lnfel.github.io/img/ui/stellar-bg/stellar-stellar.webp?v=-571598715">
+        <meta name="twitter:image:alt" content="Meteor passing over the horizon.">
 
-        
-		<link rel="modulepreload" href="/_app/immutable/entry/start.C_XGMAGo.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DrfT4bVU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.B0p9ga3q.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.C_RDnXz8.js">
         <!-- Pinterest -->
         <meta name="pinterest" content="nopin" description="Sorry, you can't save from my website!">
 
@@ -29,27 +39,35 @@
         <link rel="preload" href="/font/Zenless_1.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/font/Zenless_2.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/font/Zenless_3.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="preload" as="style" href="/css/font.css">
-        <link rel="preload" as="style" href="/css/main.css">
+        <link rel="preload" as="style" href="/css/font.css?v=836237074">
+        <link rel="preload" as="style" href="/css/main.css?v=471693858">
         <!-- <link rel="preload" href="/img/ui/stellar-bg/mask-6f.webp" as="image" type="image/webp" crossorigin="anonymous">
         <link rel="preload" href="/img/ui/stellar-bg/stellar-stellar.webp" as="image" type="image/webp" crossorigin="anonymous"> -->
         <!-- CSS -->
-        <link rel="stylesheet" href="/css/font.css">
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/font.css?v=836237074">
+        <link rel="stylesheet" href="/css/main.css?v=471693858">
+        
+		<link rel="modulepreload" href="/_app/immutable/entry/start.33QU1xSk.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BTW0gx-z.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Cw4C7KOy.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1vhg505 = {
+					__sveltekit_nfw7sl = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.C_XGMAGo.js"),
-						import("/_app/immutable/entry/app.B0p9ga3q.js")
+						import("/_app/immutable/entry/start.33QU1xSk.js"),
+						import("/_app/immutable/entry/app.Cw4C7KOy.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
