[Change] Add missing og:url and og:title

--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,8 @@
             https://stackoverflow.com/a/73545179/12478479
         -->
         <!-- Facebook Open Graph -->
+        <meta property="og:title" content="lnfel's Room">
+        <meta property="og:url" content="https://lnfel.github.io/">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://lnfel.github.io/img/ui/stellar-bg/stellar-stellar.webp">
         <meta property="og:image:alt" content="Meteor passing over the horizon.">
