--- a/404.html
+++ b/404.html
@@ -18,6 +18,8 @@
             https://stackoverflow.com/a/73545179/12478479
         -->
         <!-- Facebook Open Graph -->
+        <meta property="og:title" content="lnfel's Room">
+        <meta property="og:url" content="https://lnfel.github.io/">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://lnfel.github.io/img/ui/stellar-bg/stellar-stellar.webp?v=-571598715">
         <meta property="og:image:alt" content="Meteor passing over the horizon.">
@@ -47,11 +49,11 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.33QU1xSk.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BTW0gx-z.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.D2TMJAzg.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BZrSlzVP.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.Cw4C7KOy.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CKlMcA1p.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
 	</head>
@@ -59,15 +61,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_nfw7sl = {
+					__sveltekit_uo15di = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.33QU1xSk.js"),
-						import("/_app/immutable/entry/app.Cw4C7KOy.js")
+						import("/_app/immutable/entry/start.D2TMJAzg.js"),
+						import("/_app/immutable/entry/app.CKlMcA1p.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
