--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,8 @@
             https://stackoverflow.com/a/73545179/12478479
         -->
         <!-- Facebook Open Graph -->
+        <meta property="og:title" content="lnfel's Room">
+        <meta property="og:url" content="https://lnfel.github.io/">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://lnfel.github.io/img/ui/stellar-bg/stellar-stellar.webp?v=-571598715">
         <meta property="og:image:alt" content="Meteor passing over the horizon.">
@@ -49,18 +51,18 @@
         
 		<link href="./_app/immutable/assets/0.EKKfcYRd.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.33QU1xSk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BTW0gx-z.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D2TMJAzg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BZrSlzVP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cw4C7KOy.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CKlMcA1p.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CO7fLiMo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B10RB4An.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DGZ8KGMz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DSqPe09l.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.fsf_Lxyn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.CieCVdc_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.4BVs7Yg5.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DwmF3aii.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.CT-68twQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
@@ -68,7 +70,7 @@
 			
 			<script>
 				{
-					__sveltekit_nfw7sl = {
+					__sveltekit_uo15di = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -77,8 +79,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.33QU1xSk.js"),
-						import("./_app/immutable/entry/app.Cw4C7KOy.js")
+						import("./_app/immutable/entry/start.D2TMJAzg.js"),
+						import("./_app/immutable/entry/app.CKlMcA1p.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
