--- a/404.html
+++ b/404.html
@@ -49,11 +49,11 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.D2TMJAzg.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BZrSlzVP.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.kwCRswgh.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B80igVE_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CKlMcA1p.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BK4VNrND.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
 	</head>
@@ -61,15 +61,15 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_uo15di = {
+					__sveltekit_1cimg3h = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.D2TMJAzg.js"),
-						import("/_app/immutable/entry/app.CKlMcA1p.js")
+						import("/_app/immutable/entry/start.kwCRswgh.js"),
+						import("/_app/immutable/entry/app.BK4VNrND.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
