--- a/blog.html
+++ b/blog.html
@@ -49,20 +49,22 @@
         <link rel="stylesheet" href="./css/font.css?v=836237074">
         <link rel="stylesheet" href="./css/main.css?v=471693858">
         
-		<link href="./_app/immutable/assets/0.EKKfcYRd.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.Bu7ngXUF.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/Pulse.CVk3efjE.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Navigation.DvBJyh6p.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D2TMJAzg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BZrSlzVP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.kwCRswgh.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B80igVE_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DgBL_1-D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CKlMcA1p.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BK4VNrND.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.BQ24v_F8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CO7fLiMo.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DSqPe09l.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.fsf_Lxyn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BY75gRyZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.vsyDeTYf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.wotBBkUg.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.DwmF3aii.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.CT-68twQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Pulse.svelte_svelte_type_style_lang.DTRaQC5M.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DFjf9q7W.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Navigation.CC1n25Qi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.CgU5AtxT.js"><title>lnfel&#39;s Room</title><!-- HEAD_svelte-1s3lpnb_START --><!-- HEAD_svelte-1s3lpnb_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
@@ -70,7 +72,7 @@
 			
 			<script>
 				{
-					__sveltekit_uo15di = {
+					__sveltekit_1cimg3h = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -79,8 +81,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D2TMJAzg.js"),
-						import("./_app/immutable/entry/app.CKlMcA1p.js")
+						import("./_app/immutable/entry/start.kwCRswgh.js"),
+						import("./_app/immutable/entry/app.BK4VNrND.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
