--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+        <title>lnfel's Room</title>
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -49,27 +50,28 @@
         <link rel="stylesheet" href="/css/font.css?v=836237074">
         <link rel="stylesheet" href="/css/main.css?v=471693858">
         
-		<link rel="modulepreload" href="/_app/immutable/entry/start.kwCRswgh.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.B80igVE_.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DgBL_1-D.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.fZ9uAEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BK4VNrND.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.CEMi3-hz.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.BpxoRXrx.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.5nauvt-X.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BR5gSEEd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/paths.BSayCdpS.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DY3N4qIg.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/preload-helper.BQ24v_F8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index.CO7fLiMo.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/index.BoKGpz_g.js">
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-indigo-50 dark:text-white dark:bg-slate-900 md:overflow-hidden">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1cimg3h = {
+					__sveltekit_auym7s = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.kwCRswgh.js"),
-						import("/_app/immutable/entry/app.BK4VNrND.js")
+						import("/_app/immutable/entry/start.CEMi3-hz.js"),
+						import("/_app/immutable/entry/app.DY3N4qIg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
